Redesign homepage highlights section and update contact details

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Preload LCP Image -->
     <link rel="preload" as="image" href="images/hero-banner.jpg" fetchpriority="high">
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
@@ -65,35 +66,85 @@
         <section class="highlights" id="highlights">
             <h2>Highlights</h2>
             <div class="highlight-grid">
+                <!-- Wheelchair -->
                 <div class="highlight-card">
-                    <p>✔ Wheelchair-Accessible</p>
+                    <div class="highlight-icon">
+                        <span class="material-icons">accessible</span>
+                    </div>
+                    <h3>Wheelchair Accessible</h3>
+                    <p class="highlight-info">Ramps and wide corridors.</p>
                 </div>
+                <!-- Lift -->
                 <div class="highlight-card">
-                    <p>✔ Lift available</p>
+                    <div class="highlight-icon">
+                        <span class="material-icons">elevator</span>
+                    </div>
+                    <h3>Lift Available</h3>
+                    <p class="highlight-info">Easy access to all floors.</p>
                 </div>
+                <!-- Day Care -->
                 <div class="highlight-card">
-                    <p>✔ Day Care Facility</p>
+                    <div class="highlight-icon">
+                        <span class="material-icons">wb_sunny</span>
+                    </div>
+                    <h3>Day Care Facility</h3>
+                    <p class="highlight-info">Daily supervised care.</p>
                 </div>
+                <!-- Admission -->
                 <div class="highlight-card">
-                    <p>✔ Admission Facility for Rehabilitation</p>
+                    <div class="highlight-icon">
+                        <span class="material-icons">local_hospital</span>
+                    </div>
+                    <h3>Admission Facility</h3>
+                    <p class="highlight-info">24/7 Inpatient support.</p>
                 </div>
+                <!-- Sessions -->
                 <div class="highlight-card">
-                    <p>✔ Multiple Physiotherapy sessions per day</p>
+                    <div class="highlight-icon">
+                        <span class="material-icons">schedule</span>
+                    </div>
+                    <h3>Multiple Sessions</h3>
+                    <p class="highlight-info">Intensive daily therapy.</p>
                 </div>
+                <!-- Therapies -->
                 <div class="highlight-card">
-                    <p>✔ Physical, Cognitive, Occupational, Speech Therapy- All under one roof</p>
+                    <div class="highlight-icon">
+                        <span class="material-icons">groups</span>
+                    </div>
+                    <h3>All Therapies</h3>
+                    <p class="highlight-info">Physical, Cognitive, Speech & OT.</p>
                 </div>
+                <!-- Team -->
                 <div class="highlight-card">
-                    <p>✔ In house Nutritionist, Psychologist, Orthotist</p>
+                    <div class="highlight-icon">
+                        <span class="material-icons">medical_services</span>
+                    </div>
+                    <h3>Specialized Team</h3>
+                    <p class="highlight-info">Nutritionist, Psychologist & more.</p>
                 </div>
+                <!-- Diagnostic -->
                 <div class="highlight-card">
-                    <p>✔ Diagnostic tests- Blood tests, Xrays, DEXA Scan, ECG, Neurogenetic Testing</p>
+                    <div class="highlight-icon">
+                        <span class="material-icons">monitor_heart</span>
+                    </div>
+                    <h3>Diagnostic Tests</h3>
+                    <p class="highlight-info">Blood, X-Ray, ECG & more.</p>
                 </div>
+                <!-- Robotic -->
                 <div class="highlight-card">
-                    <p>✔ Manual Therapy to Robotic Rehabilitation</p>
+                    <div class="highlight-icon">
+                        <span class="material-icons">smart_toy</span>
+                    </div>
+                    <h3>Robotic Rehab</h3>
+                    <p class="highlight-info">Advanced robotic assistance.</p>
                 </div>
+                <!-- Personalized -->
                 <div class="highlight-card">
-                    <p>✔ Personalized Rehabilitation Plans</p>
+                    <div class="highlight-icon">
+                        <span class="material-icons">assignment_ind</span>
+                    </div>
+                    <h3>Personalized Plans</h3>
+                    <p class="highlight-info">Tailored to your needs.</p>
                 </div>
             </div>
         </section>
