--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,8 @@
         content="Contact Rehab House, Appointment, Physiotherapy Appointment, Neurorehabilitation Mumbai, Clinic Location, Book Physiotherapist">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -47,7 +48,7 @@
         <!-- Contact Information -->
         <section class="contact-info">
             <h2>Clinic Address</h2>
-            <p>📍 <strong>Purandare Diagnostic Centre, Dr Purandare Hospital</strong><br>
+            <p>📍 <strong>The Rehab House, Dr Purandare Hospital</strong><br>
                 Opposite Girgaon Chowpatty, Charni Road, Mumbai 400007</p>
             <p>📞 <strong>9653699526 / 7208343583</strong></p>
             <p>🌐 <a href="https://www.therehabhouse.in">www.therehabhouse.in</a></p>
@@ -56,9 +57,8 @@
         <!-- Google Map -->
         <section class="map">
             <h2>Find Us on Google Maps</h2>
-            <iframe
-                src="https://maps.google.com/maps?q=Purandare%20Diagnostic%20Centre%20Mumbai&t=&z=15&ie=UTF8&iwloc=&output=embed"
-                width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen>
+            <iframe src="https://maps.app.goo.gl/vdYch6uT79X749am7" width="100%" height="400" frameborder="0"
+                style="border:0;" allowfullscreen>
             </iframe>
         </section>
 
