Refactor services page: Add detail pages and redesign layout

--- a/services.html
+++ b/services.html
@@ -11,7 +11,8 @@
         content="Physiotherapy Services, Neurorehabilitation, Pain Management, Orthopedic Therapy, Pediatric Rehabilitation, Sports Injury, Vestibular Therapy, Balance Training, Post-Surgery Rehab">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -43,127 +44,63 @@
             <hr><br>
             <div class="service-container">
                 <!-- Service Cards -->
-                <div class="service-card" onclick="toggleDetails('service1')">
+                <div class="service-card">
                     <img src="images/balance-training.webp" alt="Balance & Postural Control" loading="lazy">
                     <div class="service-content">
                         <h3>Balance & Postural Control</h3>
                         <p>Our Balance & Postural Control program is designed to prevent falls and improve stability for
-                            patients with neurological or orthopedic conditions. We utilize advanced interactive motion
-                            sensors and computerized posturography to assess and treat balance deficits.</p>
-                        <div class="service-details" id="service1">
-                            <h4>Conditions Treated</h4>
-                            <ul>
-                                <li>Parkinson’s Disease</li>
-                                <li>Ataxia</li>
-                                <li>Stroke recovery</li>
-                                <li>Geriatric balance issues</li>
-                            </ul>
-                            <h4>Our Approach</h4>
-                            <p>We combine traditional physiotherapy drills with state-of-the-art technology to create a
-                                safe and effective training environment. Patients engage in fun, interactive games that
-                                challenge their stability, reaction time, and coordination.</p>
-                        </div>
+                            patients with neurological or orthopedic conditions.</p>
+                        <a href="service_detail.html?id=service1" class="btn-know-more">Know More</a>
                     </div>
                 </div>
 
-                <div class="service-card" onclick="toggleDetails('service2')">
+                <div class="service-card">
                     <img src="images/vestibular-therapy.webp" alt="Vestibular Rehabilitation" loading="lazy">
                     <div class="service-content">
                         <h3>Vestibular Rehabilitation</h3>
                         <p>Vestibular Rehabilitation Therapy (VRT) is a specialized form of therapy intended to
                             alleviate both the primary and secondary problems caused by vestibular disorders.</p>
-                        <div class="service-details" id="service2">
-                            <h4>Why It's Needed</h4>
-                            <p>Vertigo, dizziness, and imbalance can severely impact quality of life. Our specialized
-                                program targets the root cause of these symptoms.</p>
-                            <h4>Therapy Techniques</h4>
-                            <ul>
-                                <li>Gaze Stabilization Exercises</li>
-                                <li>Canalith Repositioning Maneuvers (Epley)</li>
-                                <li>Habituation Exercises</li>
-                            </ul>
-                        </div>
+                        <a href="service_detail.html?id=service2" class="btn-know-more">Know More</a>
                     </div>
                 </div>
 
-                <div class="service-card" onclick="toggleDetails('service3')">
+                <div class="service-card">
                     <img src="images/visual-therapy.webp" alt="Visual Therapy" loading="lazy">
                     <div class="service-content">
                         <h3>Visual Therapy</h3>
                         <p>Visual Therapy is crucial for patients suffering from vision deficits due to neurological
                             conditions such as stroke or traumatic brain injury.</p>
-                        <div class="service-details" id="service3">
-                            <h4>Focus Areas</h4>
-                            <p>We work on improving visual tracking, convergence, and visual-spatial processing to help
-                                patients navigate their environment safely.</p>
-                            <h4>Benefits</h4>
-                            <ul>
-                                <li>Improved reading ability</li>
-                                <li>Better depth perception</li>
-                                <li>Reduced visual fatigue</li>
-                            </ul>
-                        </div>
+                        <a href="service_detail.html?id=service3" class="btn-know-more">Know More</a>
                     </div>
                 </div>
 
-                <div class="service-card" onclick="toggleDetails('service4')">
+                <div class="service-card">
                     <img src="images/spasticity-management.webp" alt="Spasticity & Posture Management" loading="lazy">
                     <div class="service-content">
                         <h3>Spasticity & Posture Management</h3>
                         <p>Effective management of spasticity and posture is vital for preventing contractures and
                             improving independence in daily activities.</p>
-                        <div class="service-details" id="service4">
-                            <h4>Comprehensive Care</h4>
-                            <p>Our approach includes stretching protocols, splinting, and positioning strategies to
-                                combat the effects of a sedentary lifestyle and muscle stiffness.</p>
-                            <h4>Technologies Used</h4>
-                            <ul>
-                                <li>Electrical Stimulation</li>
-                                <li>Biofeedback</li>
-                                <li>Custom Orthotics consultation</li>
-                            </ul>
-                        </div>
+                        <a href="service_detail.html?id=service4" class="btn-know-more">Know More</a>
                     </div>
                 </div>
 
-                <div class="service-card" onclick="toggleDetails('service5')">
+                <div class="service-card">
                     <img src="images/cognitive-training.webp" alt="Cognition-Enhancing Activities" loading="lazy">
                     <div class="service-content">
                         <h3>Cognition-Enhancing Activities</h3>
                         <p>Our cognitive rehabilitation program focuses on restoring memory, attention, and executive
                             functions impaired by brain injury or degeneration.</p>
-                        <div class="service-details" id="service5">
-                            <h4>Training Modules</h4>
-                            <p>We utilize a mix of traditional pen-and-paper tasks, board games, and digital
-                                screen-based activities to simulate real-world challenges.</p>
-                            <h4>Key Outcomes</h4>
-                            <ul>
-                                <li>Enhanced Memory and Recall</li>
-                                <li>Improved Attention Span</li>
-                                <li>Faster Reaction Times</li>
-                                <li>Better Problem-Solving Skills</li>
-                            </ul>
-                        </div>
+                        <a href="service_detail.html?id=service5" class="btn-know-more">Know More</a>
                     </div>
                 </div>
 
-                <div class="service-card" onclick="toggleDetails('service6')">
+                <div class="service-card">
                     <img src="images/pain-management.webp" alt="Pain Management" loading="lazy">
                     <div class="service-content">
                         <h3>Pain Management</h3>
                         <p>Chronic pain requires a multi-faceted approach. We offer evidence-based treatments to
                             alleviate pain and restore function.</p>
-                        <div class="service-details" id="service6">
-                            <h4>Techniques</h4>
-                            <ul>
-                                <li>Dry Needling & Cupping Therapy</li>
-                                <li>Manual Therapy & Manipulations</li>
-                                <li>Kinesiotaping</li>
-                                <li>Advanced Electrotherapy (IFT, TENS, Ultrasound)</li>
-                            </ul>
-                            <h4>Conditions</h4>
-                            <p>Back pain, neck pain, sports injuries, and post-surgical pain.</p>
-                        </div>
+                        <a href="service_detail.html?id=service6" class="btn-know-more">Know More</a>
                     </div>
                 </div>
             </div>
@@ -173,16 +110,46 @@
 
         <!-- 7 Unique Sections -->
         <section class="rehab-sections" id="comprehensive-rehab">
-            <h2>Our 7 Uniquely curated Sections for Comprehensive Rehabilitation</h2>
-            <ul>
-                <li>✔ Gait & Mobility Training</li>
-                <li>✔ Equipment based Strength & Conditioning</li>
-                <li>✔ Electrotherapeutic Modalities</li>
-                <li>✔ Hand function & Fine Motor Training</li>
-                <li>✔ Cognitive Rehabilitation</li>
-                <li>✔ Robotic Rehabilitation</li>
-                <li>✔ Supervised IPD Facility</li>
-            </ul>
+            <div class="rehab-container">
+                <!-- Left: 7 Pointers -->
+                <div class="rehab-pointers">
+                    <div class="pointer-item">
+                        <div class="pointer-circle">1</div>
+                        <span>Gait & Mobility Training</span>
+                    </div>
+                    <div class="pointer-item">
+                        <div class="pointer-circle">2</div>
+                        <span>Equipment based Strength & Conditioning</span>
+                    </div>
+                    <div class="pointer-item">
+                        <div class="pointer-circle">3</div>
+                        <span>Electrotherapeutic Modalities</span>
+                    </div>
+                    <div class="pointer-item">
+                        <div class="pointer-circle">4</div>
+                        <span>Hand function & Fine Motor Training</span>
+                    </div>
+                    <div class="pointer-item">
+                        <div class="pointer-circle">5</div>
+                        <span>Cognitive Rehabilitation</span>
+                    </div>
+                    <div class="pointer-item">
+                        <div class="pointer-circle">6</div>
+                        <span>Robotic Rehabilitation</span>
+                    </div>
+                    <div class="pointer-item">
+                        <div class="pointer-circle">7</div>
+                        <span>Supervised IPD Facility</span>
+                    </div>
+                </div>
+
+                <!-- Right: Content -->
+                <div class="rehab-content">
+                    <h2>Our 7 Uniquely curated Sections for Comprehensive Rehabilitation</h2>
+                    <p>At The Rehab House, we believe in a holistic approach. These 7 distinct pillars of rehabilitation
+                        ensure that every aspect of a patient's recovery is addressed with precision and care.</p>
+                </div>
+            </div>
         </section>
         <br>
     </main>
