Mobile Lighthouse optimizations, Rehab section refactor, and README updates

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
             <div class="team-container">
                 <!-- Dr. Vidhi -->
                 <div class="team-member">
-                    <img src="images/dr-vidhi.webp" alt="Dr. Vidhi Dave" loading="lazy">
+                    <img src="images/dr-vidhi.webp" alt="Dr. Vidhi Dave" loading="lazy" width="150" height="150">
                     <h3>Dr. Vidhi Dave</h3>
                     <p>Specialist in Neurorehabilitation and Physiotherapy.</p>
                     <button class="know-more-btn" onclick="openProfile('vidhi')">Know More</button>
@@ -76,7 +76,7 @@
 
                 <!-- Dr. Vinit -->
                 <div class="team-member">
-                    <img src="images/dr-vinit.webp" alt="Dr. Vinit Gada" loading="lazy">
+                    <img src="images/dr-vinit.webp" alt="Dr. Vinit Gada" loading="lazy" width="150" height="150">
                     <h3>Dr. Vinit Gada</h3>
                     <p>Expert in Orthopedic Rehabilitation and Pain Management.</p>
                     <button class="know-more-btn" onclick="openProfile('vinit')">Know More</button>
