--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
     <!-- Preload LCP Image -->
     <link rel="preload" as="image" href="images/hero-banner.jpg" fetchpriority="high">
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
@@ -40,7 +40,7 @@
             <h1>South Mumbai’s Leading Neuro & Ortho Rehabilitation Centre</h1>
             <p>Expert Care for Stroke, Parkinson’s, Spine Injury & Post-Surgery Recovery</p>
             <div class="hero-buttons">
-                <a href="contact.html#booking" class="btn-hero">➡️ Book Appointment</a>
+                <a href="contact.html#booking" class="btn-hero">Book Appointment</a>
                 <a href="https://wa.me/919653699526" class="btn-hero btn-secondary">WhatsApp Us</a>
             </div>
         </div>
