--- a/services.html
+++ b/services.html
@@ -45,7 +45,8 @@
             <div class="service-container">
                 <!-- Service Cards -->
                 <div class="service-card">
-                    <img src="images/balance-training.webp" alt="Balance & Postural Control" loading="lazy">
+                    <img src="images/balance-training.webp" alt="Balance & Postural Control" loading="lazy" width="600"
+                        height="600">
                     <div class="service-content">
                         <h3>Balance & Postural Control</h3>
                         <a href="service_detail.html?id=service1" class="btn-know-more">Know More</a>
@@ -53,7 +54,8 @@
                 </div>
 
                 <div class="service-card">
-                    <img src="images/vestibular-therapy.webp" alt="Vestibular Rehabilitation" loading="lazy">
+                    <img src="images/vestibular-therapy.webp" alt="Vestibular Rehabilitation" loading="lazy" width="600"
+                        height="600">
                     <div class="service-content">
                         <h3>Vestibular Rehabilitation</h3>
                         <a href="service_detail.html?id=service2" class="btn-know-more">Know More</a>
@@ -61,7 +63,7 @@
                 </div>
 
                 <div class="service-card">
-                    <img src="images/visual-therapy.webp" alt="Visual Therapy" loading="lazy">
+                    <img src="images/visual-therapy.webp" alt="Visual Therapy" loading="lazy" width="600" height="600">
                     <div class="service-content">
                         <h3>Visual Therapy</h3>
                         <a href="service_detail.html?id=service3" class="btn-know-more">Know More</a>
@@ -69,7 +71,8 @@
                 </div>
 
                 <div class="service-card">
-                    <img src="images/spasticity-management.webp" alt="Spasticity & Posture Management" loading="lazy">
+                    <img src="images/spasticity-management.webp" alt="Spasticity & Posture Management" loading="lazy"
+                        width="600" height="600">
                     <div class="service-content">
                         <h3>Spasticity & Posture Management</h3>
                         <a href="service_detail.html?id=service4" class="btn-know-more">Know More</a>
@@ -77,7 +80,8 @@
                 </div>
 
                 <div class="service-card">
-                    <img src="images/cognitive-training.webp" alt="Cognition-Enhancing Activities" loading="lazy">
+                    <img src="images/cognitive-training.webp" alt="Cognition-Enhancing Activities" loading="lazy"
+                        width="600" height="600">
                     <div class="service-content">
                         <h3>Cognition-Enhancing Activities</h3>
                         <a href="service_detail.html?id=service5" class="btn-know-more">Know More</a>
@@ -85,7 +89,8 @@
                 </div>
 
                 <div class="service-card">
-                    <img src="images/pain-management.webp" alt="Pain Management" loading="lazy">
+                    <img src="images/pain-management.webp" alt="Pain Management" loading="lazy" width="600"
+                        height="600">
                     <div class="service-content">
                         <h3>Pain Management</h3>
                         <a href="service_detail.html?id=service6" class="btn-know-more">Know More</a>
@@ -102,31 +107,45 @@
                 <!-- Left: 7 Pointers -->
                 <div class="rehab-pointers">
                     <div class="pointer-item">
-                        <div class="pointer-circle">1</div>
+                        <div class="pointer-circle">
+                            <span class="material-icons">directions_walk</span>
+                        </div>
                         <span>Gait & Mobility Training</span>
                     </div>
                     <div class="pointer-item">
-                        <div class="pointer-circle">2</div>
+                        <div class="pointer-circle">
+                            <span class="material-icons">fitness_center</span>
+                        </div>
                         <span>Equipment based Strength & Conditioning</span>
                     </div>
                     <div class="pointer-item">
-                        <div class="pointer-circle">3</div>
+                        <div class="pointer-circle">
+                            <span class="material-icons">electric_bolt</span>
+                        </div>
                         <span>Electrotherapeutic Modalities</span>
                     </div>
                     <div class="pointer-item">
-                        <div class="pointer-circle">4</div>
+                        <div class="pointer-circle">
+                            <span class="material-icons">pan_tool</span>
+                        </div>
                         <span>Hand function & Fine Motor Training</span>
                     </div>
                     <div class="pointer-item">
-                        <div class="pointer-circle">5</div>
+                        <div class="pointer-circle">
+                            <span class="material-icons">psychology</span>
+                        </div>
                         <span>Cognitive Rehabilitation</span>
                     </div>
                     <div class="pointer-item">
-                        <div class="pointer-circle">6</div>
+                        <div class="pointer-circle">
+                            <span class="material-icons">smart_toy</span>
+                        </div>
                         <span>Robotic Rehabilitation</span>
                     </div>
                     <div class="pointer-item">
-                        <div class="pointer-circle">7</div>
+                        <div class="pointer-circle">
+                            <span class="material-icons">bedroom_parent</span>
+                        </div>
                         <span>Supervised IPD Facility</span>
                     </div>
                 </div>
