Update contact page options and styling; fix typo in about us

--- a/about_us.html
+++ b/about_us.html
@@ -25,7 +25,7 @@
         <div class="hero-content">
             <h1>About Us</h1>
             <p>Our Journey, Vision, and Mission</p>
-            <p>Providing comprehensive rehabilitation programs tailored to individual needs.</p>
+            <p>Providing comprehensive rehabilitation programs tailored to individual needs</p>
         </div>
     </section>
     <!-- Main Content -->
