--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         <!-- Contact Information -->
         <section class="contact-info">
             <h2>Clinic Address</h2>
-            <p>📍 <strong>The Rehab House, Dr Purandare Hospital</strong><br>
+            <p>📍 The Rehab House, Dr Purandare Hospital<br>
                 Opposite Girgaon Chowpatty, Charni Road, Mumbai 400007</p>
             <p>📞 <strong>9653699526 / 7208343583</strong></p>
             <p>🌐 <a href="https://www.therehabhouse.in">www.therehabhouse.in</a></p>
@@ -68,7 +68,7 @@
             <div class="team-container">
                 <!-- Dr. Vidhi -->
                 <div class="team-member">
-                    <img src="images/dr-vidhi.webp" alt="Dr. Vidhi Dave" loading="lazy" width="150" height="150">
+                    <img src="images/dr-vidhi.webp" alt="Dr. Vidhi Dave" loading="lazy">
                     <h3>Dr. Vidhi Dave</h3>
                     <p>Specialist in Neurorehabilitation and Physiotherapy.</p>
                     <button class="know-more-btn" onclick="openProfile('vidhi')">Know More</button>
@@ -76,7 +76,7 @@
 
                 <!-- Dr. Vinit -->
                 <div class="team-member">
-                    <img src="images/dr-vinit.webp" alt="Dr. Vinit Gada" loading="lazy" width="150" height="150">
+                    <img src="images/dr-vinit.webp" alt="Dr. Vinit Gada" loading="lazy">
                     <h3>Dr. Vinit Gada</h3>
                     <p>Expert in Orthopedic Rehabilitation and Pain Management.</p>
                     <button class="know-more-btn" onclick="openProfile('vinit')">Know More</button>
@@ -97,6 +97,9 @@
                 <label for="service">Select Service</label>
                 <select id="service" name="service" required>
                     <option value="">Choose a Service</option>
+                    <option value="Clinic Appointment">Clinic Appointment</option>
+                    <option value="Home Visit">Home Visit</option>
+                    <option value="Online Consultation">Online Consultation</option>
                     <option value="Physiotherapy">Physiotherapy</option>
                     <option value="Neurorehabilitation">Neurorehabilitation</option>
                     <option value="Pain Management">Pain Management</option>
