Refactor About Us page: Dynamic content, zigzag layout, and sleek expansion; Update docs

--- a/about_us.html
+++ b/about_us.html
@@ -11,7 +11,8 @@
         content="About Rehab House, Dr. Vidhi Dave, Dr. Vinit Gada, Rehabilitation Team, Mission Vision, Physiotherapy Clinic Mumbai">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -36,7 +37,7 @@
         </section> -->
 
         <section class="who-benefits" id="who-benefits">
-            <h2>Who will benefits from our services:</h2>
+            <h2 class="section-title-center">Who will benefits from our services:</h2>
             <ul>
                 <li>✔ <strong>With Neurological conditions requiring intensive rehabilitation</strong> (Stroke, MS, GBS,
                     spinal cord injury, Parkinson’s disease, traumatic brain injury, Dementia, Alzheimer's, Vertigo
@@ -55,56 +56,9 @@
         </section>
 
         <section class="how-different" id="how-different">
-            <h2>How are we different</h2>
+            <h2 class="section-title-center">How are we different</h2>
 
-            <div class="difference-card">
-                <h3>Faster Recovery through Admission Facility</h3>
-                <p>Neurologically affected patients may take longer for recovery. It is only possible to take 2/3/4
-                    treatment sessions per day in a Physiotherapy admission facility like ours. With multiple sessions
-                    per day, with each session focusing on a different problem (like walking, Balance training,
-                    cognitive rehabilitation, Hand strengthening, etc), the patient will recover faster with improvement
-                    in various domains all at once.</p>
-            </div>
-
-            <div class="difference-card">
-                <h3>Multispeciality Collaborative Approach:</h3>
-                <p>Patients often get confused with different opinions coming from different specialists. At The Rehab
-                    House, the Rehabilitation team including the Physical, Cognitive, Occupational , Speech Therapists,
-                    the Neurologist, the Orthotist, the Dietician and the Psychologist work together to give a unified
-                    care plan.</p>
-            </div>
-
-            <div class="difference-card">
-                <h3>Making Caregiving Easy</h3>
-                <p>Medical Conditions & Aging ring our bells and say 'Surprise!'. The family members and the caregivers
-                    are never prepared for this change. At The Rehab House, the caregivers get an insight of how to
-                    handle the patients, how to transfer/ dress/ motivate them. With the help of the support staff at
-                    The Rehab House, the sudden physical burden imposed on the family member is reduced and they can
-                    become emotionally and socially more available to take care of the patient well.</p>
-            </div>
-
-            <div class="difference-card">
-                <h3>All Services under one roof</h3>
-                <p>Patients are often seen travelling from one place to another to seek consultations, treatments, blood
-                    tests, xrays, and other diagnostic tests. The Rehab House is a one stop solution with all the
-                    specialists and services available for the patient at one place.</p>
-            </div>
-
-            <div class="difference-card">
-                <h3>Specialized Rehabilitation Programs</h3>
-                <p>We do understand that this long journey of recovery can be boring. At The Rehab House, with our
-                    innovative and creative treatment strategies we assure better engagement and motivation for our
-                    patients.</p>
-            </div>
-
-            <div class="difference-card">
-                <h3>Discharge Protocol for a Smooth Transition</h3>
-                <p>We believe Physiotherapy is a form of Medical Treatment and not a wellness program. And so, at The
-                    Rehab House, we aim at giving multiple treatment sessions per day for a faster recovery and a
-                    shorter hospitalisation stay, making it economically, socially and emotionally easier for the
-                    patient to get back to normalcy. We believe our patients must become independent soon and move ahead
-                    in their lives after getting treated and discharged from The Rehab House.</p>
-            </div>
+            <div id="differences-container"></div>
         </section>
     </main>
     <!-- Footer Component -->
@@ -118,6 +72,7 @@
     <!-- JavaScript -->
     <script src="js/header_footer.js" defer></script>
     <script src="js/main.js" defer></script>
+    <script src="js/aboutus.js" defer></script>
 </body>
 
 </html>
